--- a/index.html
+++ b/index.html
@@ -24,82 +24,92 @@
             <div style="text-align: center; margin-bottom: 1em;">
                 <audio id="wedding-audio" controls loop>
                     <source src="sources/audio.weba" type="audio/webm">
-                    Tu navegador no soporta el elemento de audio.
+                    Your browser does not support the audio element.
                 </audio>
             </div>
         </section>
         <section class="countdown-section fade-in">
             <h2 style="font-family: 'Cormorant Garamond', 'Times New Roman', serif; font-weight: 600;">FALTAN</h2>
-            <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet"><div id="countdown" style="display: flex; flex-direction: column; align-items: center;">
-                <table>
-                    <thead>
-                        <tr style="font-size: 16px; font-weight: normal;">
-                            <td id="days" style="padding: 0 5px; background: #870925; border-radius: 12px; font-weight: bold; font-size: 1.3em; min-width: 2.5em; text-align: center; color: #fff;">00</td>
-                            <td id="hours" style="padding: 0 5px; background: #870925; border-radius: 12px; font-weight: bold; font-size: 1.3em; min-width: 2.5em; text-align: center; color: #fff;">00</td>
-                            <td id="minutes" style="padding: 0 5px; background: #870925; border-radius: 12px; font-weight: bold; font-size: 1.3em; min-width: 2.5em; text-align: center; color: #fff;">00</td>
-                            <td id="seconds" style="padding: 0 5px; background: #870925; border-radius: 12px; font-weight: bold; font-size: 1.3em; min-width: 2.5em; text-align: center; color: #fff;">00</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th style="padding: 0 15px;">Días</th>
-                            <th style="padding: 0 15px;">Horas</th>
-                            <th style="padding: 0 15px;">Minutos</th>
-                            <th style="padding: 0 15px;">Segundos</th>
-                        </tr>
-                    </tbody>
-                </table>
+            <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
+            <div id="countdown" style="display: flex; flex-direction: column; align-items: center;">
+                <div class="countdown-table-wrapper" style="width: 100%; max-width: 400px;">
+                    <div style="display: flex; justify-content: center; gap: 1.2em; flex-wrap: wrap;">
+                        <div style="text-align: center;">
+                            <div style="width: 2.8em; height: 2.8em; background: #870925; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 1.3em; color: #fff; margin: 0 auto;" id="days">00</div>
+                            <div style="padding-top: 0.3em; font-weight: 500; color: #870925; font-size: 1em;">DÍAS</div>
+                        </div>
+                        <div style="text-align: center;">
+                            <div style="width: 2.8em; height: 2.8em; background: #870925; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 1.3em; color: #fff; margin: 0 auto;" id="hours">00</div>
+                            <div style="padding-top: 0.3em; font-weight: 500; color: #870925; font-size: 1em;">HORAS</div>
+                        </div>
+                        <div style="text-align: center;">
+                            <div style="width: 2.8em; height: 2.8em; background: #870925; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 1.3em; color: #fff; margin: 0 auto;" id="minutes">00</div>
+                            <div style="padding-top: 0.3em; font-weight: 500; color: #870925; font-size: 1em;">MIN</div>
+                        </div>
+                        <div style="text-align: center;">
+                            <div style="width: 2.8em; height: 2.8em; background: #870925; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; font-size: 1.3em; color: #fff; margin: 0 auto;" id="seconds">00</div>
+                            <div style="padding-top: 0.3em; font-weight: 500; color: #870925; font-size: 1em;">SEG</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section style="text-align: center;">
             <p>Nos encantaría que nos acompañaras en este día tan especial.</p>
             <div class="wedding-date" style="display: flex; justify-content: center; align-items: center; gap: 0.5em; margin-bottom: 1em;">
-            <div style="font-size: 1.2em; letter-spacing: 2px; border-bottom: 2px solid #870925; border-top: 2px solid #870925; padding: 0.5em 0.6em; color: #870925;">
-                Domingo
-            </div>
-            <div style="display: flex; flex-direction: column; align-items: center;">
-                <span style="font-size: 2.5em; font-weight: bold; color: #870925;">17</span>
-            </div>
-            <div style="font-size: 1.2em; letter-spacing: 2px; border-bottom: 2px solid #870925; border-top: 2px solid #870925; padding: 0.5em 0.6em; color: #870925;">
-                Agosto
-            </div>                
+                <div style="font-size: 1.2em; letter-spacing: 2px; border-bottom: 2px solid #870925; border-top: 2px solid #870925; padding: 0.5em 0.6em; color: #870925;">
+                    Domingo
+                </div>
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <span style="font-size: 2.5em; font-weight: bold; color: #870925;">17</span>
+                </div>
+                <div style="font-size: 1.2em; letter-spacing: 2px; border-bottom: 2px solid #870925; border-top: 2px solid #870925; padding: 0.5em 0.6em; color: #870925;">
+                    Agosto
+                </div>                
             </div>
             <div style="display: flex; flex-direction: column; align-items: center; margin-top: -0.5em;">
-            <div style="font-size: 1.2em; color: #870925;">
-               HORA: 9:30 AM
+                <div style="font-size: 1.2em; color: #870925;">
+                    HORA: 9:30 AM
+                </div>
             </div>
-            </div>
-        </section><br>
+        </section>
+        <br>
         <section class="itinerary">
             <div class="location fade-in">
-            <span style="font-size: 2em; vertical-align: middle; margin-right: 0.3em;" title="Iglesia">
-                <!-- Icono SVG de iglesia -->
-                <svg width="1.2em" height="1.2em" viewBox="0 0 24 24" fill="none" style="vertical-align: middle;">
-                <path d="M12 2L15 5V7H17V9H19V22H5V9H7V7H9V5L12 2Z" stroke="#870925" stroke-width="1.5" fill="#f3e7e9"/>
-                <rect x="10" y="14" width="4" height="5" fill="#870925"/>
-                <rect x="7" y="11" width="2" height="3" fill="#e7bfa7"/>
-                <rect x="15" y="11" width="2" height="3" fill="#e7bfa7"/>
-                </svg>
-            </span>
-            <p><strong >Iglesia Salem A.D.</strong></p>
-            <p >Calle El Socorro, Barrio El Centro,<br>El Porvenir, Santa Ana</p>
-            <div style="margin-top: 1em;"></div>
+                <span style="font-size: 2em; vertical-align: middle; margin-right: 0.1em;" title="Iglesia">
+                    <!-- Icono SVG de iglesia -->
+                    <svg width="1.2em" height="1.2em" viewBox="0 0 32 32" fill="none" style="vertical-align: middle; margin-left: 0.2em;">
+                        <image href="sources/igle.svg" width="32" height="32" style="filter: invert(14%) sepia(97%) saturate(7492%) hue-rotate(340deg) brightness(80%) contrast(120%); color: #870925;" />
+                    </svg>
+                </span>
+                <p style="color: #000;"><strong>Iglesia Salem A.D.</strong></p>
+                <p style="font-size: 0.75em; color: #000;">Calle El Socorro, Barrio El Centro,<br>El Porvenir, Santa Ana</p>
+                <div style="margin-top: 1em;"></div>
                 <a href="https://maps.app.goo.gl/qnaAGR9CDKxUxi1T8" target="_blank" rel="noopener" class="btn-outline">
-                    Ver ubicación
+                    <span style="font-size: 0.7em;">Ubicación</span>
                 </a>
             </div>
         </section>
         <section>
             <div style="text-align: center; margin-top: 1em;">
+                <svg width="4.5em" height="2.3em" viewBox="0 0 80 80" fill="none" style="vertical-align: middle; margin-left: 0.2em;">
+                    <image href="sources/sms.svg" width="80" height="80" style="filter: invert(14%) sepia(97%) saturate(7492%) hue-rotate(340deg) brightness(80%) contrast(120%); color: #870925;" />
+                </svg>
+                <p><strong>Confirmar asistencia</strong></p>
+                <p style="font-size: 0.75em;">Por favor confirma tu asistencia,<br>¡Esperamos que estés allí!</p>
             <a href="https://wa.me/503XXXXXXXX?text=Hola%2C%20quiero%20confirmar%20mi%20asistencia%20a%20la%20boda%20de%20Yuli%20y%20Josu%C3%A9." 
                 target="_blank" 
                 rel="noopener" 
-                style="display: inline-block; padding: 0.7em 1.5em; background: #870925; color: #fff; border-radius: 8px; font-size: 1.1em; font-weight: bold; text-decoration: none; box-shadow: 0 2px 8px rgba(135,9,37,0.15); transition: background 0.2s;">
-                 Confirmar asistencia 
+                class="btn-outline">
+                <span style="font-size: 0.7em;">Confirmar</span>
             </a>
             </div>
         </section>
-        <footer>            
+        <footer>         
+            <p style="font-family: 'Dancing Script', cursive; font-size: 2em; color: #870925; margin: 0.5em 0;">
+                Te esperamos
+            </p>
+            <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
             <p>Con cariño, Yuli & Josué</p>
         </footer>
     </div>
