Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
                 </audio>
             </div>
         </section>
-        <section class="countdown-section fade-in">
+        <section style="margin-bottom: 1.2em;"></section>
+            <div class="bible-verse" style="text-align: center; margin: 1.2em 0 0.7em 0;">
+                <blockquote style="font-style: italic; color: #870925; font-size: 0.98em; margin: 0 auto; max-width: 370px; font-family: 'Cormorant Garamond', serif; letter-spacing: 0.01em;">
+                    “Mejor son dos que uno; porque tienen mejor paga de su trabajo. Porque si cayeren, el uno levantará a su compañero.”
+                    <br>
+                    <span style="display: block; margin-top: 0.7em; font-size: 0.85em; color: #6a2236; font-family: 'Marcellus', serif; letter-spacing: 0.03em;">
+                        Eclesiastés 4:9-10
+                    </span>
+                </blockquote>
+            </div>
+        </section>
+        <section class="countdown-section fade-in" style="margin-top: 0;"></section>
             <h2 style="font-family: 'Cormorant Garamond', 'Times New Roman', serif; font-weight: 600;">FALTAN</h2>
             <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
             <div id="countdown" style="display: flex; flex-direction: column; align-items: center;">
@@ -61,10 +72,10 @@
                     Domingo
                 </div>
                 <div style="display: flex; flex-direction: column; align-items: center;">
-                    <span style="font-size: 2.5em; font-weight: bold; color: #870925;">17</span>
+                    <span style="font-size: 3.5em; font-weight: bold; color: #870925;">17</span>
                 </div>
                 <div style="font-size: 1.2em; letter-spacing: 2px; border-bottom: 2px solid #870925; border-top: 2px solid #870925; padding: 0.5em 0.6em; color: #870925;">
-                    Agosto
+                    &nbsp;Agosto&nbsp;
                 </div>                
             </div>
             <div style="display: flex; flex-direction: column; align-items: center; margin-top: -0.5em;">
@@ -80,30 +91,30 @@
                 <span style="font-size: 2em; vertical-align: middle; margin-right: 0.1em;" title="Iglesia">
                     <!-- Icono SVG de iglesia -->
                     <svg width="1.2em" height="1.2em" viewBox="0 0 32 32" fill="none" style="vertical-align: middle; margin-left: 0.2em;">
-                        <image href="sources/igle.svg" width="32" height="32" style="filter: invert(14%) sepia(97%) saturate(7492%) hue-rotate(340deg) brightness(80%) contrast(120%); color: #870925;" />
+                        <image href="sources/igle.svg" width="32" height="32" style="color: #870925;" />
                     </svg>
                 </span>
                 <p style="color: #000;"><strong>Iglesia Salem A.D.</strong></p>
-                <p style="font-size: 0.75em; color: #000;">Calle El Socorro, Barrio El Centro,<br>El Porvenir, Santa Ana</p>
+                <p style="font-size: 0.75em; color: #000;position: relative; top: 0em !important;">Calle El Socorro, Barrio El Centro,<br>El Porvenir, Santa Ana</p>
                 <div style="margin-top: 1em;"></div>
-                <a href="https://maps.app.goo.gl/qnaAGR9CDKxUxi1T8" target="_blank" rel="noopener" class="btn-outline">
-                    <span style="font-size: 0.7em;">Ubicación</span>
+                <a href="https://maps.app.goo.gl/qnaAGR9CDKxUxi1T8" target="_blank" rel="noopener" class="btn-outline" style="display: inline-block; min-width: 110px; padding: 0.45em 1.2em; font-size: 1em; border-radius: 22px; border: 2px solid #870925; color: #870925; background: #fff; text-align: center; transition: background 0.2s, color 0.2s;">
+                    <span style="font-size: 0.95em;">Ubicación</span>
                 </a>
-            </div>
-            </section>
-            <section>
-                <div style="text-align: center; margin-top: 1em;">
-                    <svg width="4.5em" height="2.3em" viewBox="0 0 80 80" fill="none" style="vertical-align: middle; margin-left: 0.2em;">
-                        <image href="sources/sms.svg" width="80" height="80" style="filter: invert(14%) sepia(97%) saturate(7492%) hue-rotate(340deg) brightness(80%) contrast(120%); color: #870925;" />
+                </div>
+                </section>
+                <section>
+                    <div style="text-align: center; margin-top: 1em;">
+                        <svg width="4.5em" height="2.3em" viewBox="0 0 80 80" fill="none" style="vertical-align: middle; margin-left: 0.2em;">
+                        <image href="sources/sms.svg" width="80" height="80" style="color: #870925;" />
                     </svg>
                     <p><strong>Confirmar asistencia</strong></p>
-                    <p style="font-size: 0.75em;">Por favor confirma tu asistencia,<br>¡Esperamos que estés allí!</p>
-                <a href="https://wa.me/503XXXXXXXX?text=Hola%2C%20quiero%20confirmar%20mi%20asistencia%20a%20la%20boda%20de%20Yuli%20y%20Josu%C3%A9." 
-                    target="_blank" 
-                    rel="noopener" 
-                    class="btn-outline">
-                    <span style="font-size: 0.7em;">Confirmar</span>
-                </a>
+                    <p style="font-size: 0.75em; top: 0em !important;">Por favor confirma tu asistencia,<br>¡Esperamos que estés allí!</p>
+                    <a href="https://wa.me/503XXXXXXXX?text=Hola%2C%20quiero%20confirmar%20mi%20asistencia%20a%20la%20boda%20de%20Yuli%20y%20Josu%C3%A9." 
+                        target="_blank" 
+                        rel="noopener" 
+                        class="btn-outline">
+                        <span style="font-size: 0.7em;">Confirmar</span>
+                    </a>
                 </div>
             </section>
         </section>
@@ -113,7 +124,7 @@
                 Te esperamos
             </p>
             <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-            <p>Con cariño, Yuli & Josué</p>
+            <p>Yuli & Josué <br> 17.08.2025</p>
         </footer>
     </div>
     <script src="main.js"></script>
