Actualizar nombres en la invitación, mejorar la reproducción de audio y agregar sección para compartir fotos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <header class="fade-in header-responsive" style="background-image: url('sources/img1.png'); position: relative; background-size: cover; background-repeat: no-repeat; background-position: center top; min-height: 220px; display: flex; align-items: center; justify-content: center; padding: 1.5em 1em;">
              <h1 style="text-align: center;">
-                Yuli Cazún<br>
+                Dalia Cazún<br>
                 <span class="amp" style="display: block; font-size: 2em;">&</span>
                 Josué Díaz
             </h1>
@@ -22,7 +22,7 @@
         <br>
         <section>
             <div style="text-align: center; margin-bottom: 1em;">
-                <audio id="wedding-audio" controls loop>
+                <audio id="wedding-audio" controls loop autoplay>
                     <source src="sources/audio.weba" type="audio/webm">
                     Tu navegador no soporta el elemento de audio.
                 </audio>
@@ -31,7 +31,7 @@
         <section style="margin-bottom: 1.2em;"></section>
             <div class="bible-verse" style="text-align: center; margin: 1.2em 0 0.7em 0;">
                 <blockquote style="font-style: italic; color: #870925; font-size: 0.98em; margin: 0 auto; max-width: 370px; font-family: 'Cormorant Garamond', serif; letter-spacing: 0.01em;">
-                    “Mejor son dos que uno; porque tienen mejor paga de su trabajo. Porque si cayeren, el uno levantará a su compañero.”
+                    “Mejor son dos que uno; ...Porque si cayeren, el uno levantará a su compañero.”
                     <br>
                     <span style="display: block; margin-top: 0.7em; font-size: 0.85em; color: #6a2236; font-family: 'Marcellus', serif; letter-spacing: 0.03em;">
                         Eclesiastés 4:9-10
@@ -97,7 +97,8 @@
                 <p style="color: #000;"><strong>Iglesia Salem A.D.</strong></p>
                 <p style="font-size: 0.75em; color: #000;position: relative; top: 0em !important;">Calle El Socorro, Barrio El Centro,<br>El Porvenir, Santa Ana</p>
                 <div style="margin-top: 1em;"></div>
-                <a href="https://maps.app.goo.gl/qnaAGR9CDKxUxi1T8" target="_blank" rel="noopener" class="btn-outline" style="display: inline-block; min-width: 110px; padding: 0.45em 1.2em; font-size: 1em; border-radius: 22px; border: 2px solid #870925; color: #870925; background: #fff; text-align: center; transition: background 0.2s, color 0.2s;">
+                <a href="https://maps.app.goo.gl/qnaAGR9CDKxUxi1T8" target="_blank" rel="noopener" class="btn-outline" 
+                style="display: inline-block; min-width: 110px; padding: 0.45em 1.2em; font-size: 0.9em; border-radius: 22px; border: 2px solid #870925; color: #870925; background: #fff; text-align: center; transition: background 0.2s, color 0.2s;">
                     <span style="font-size: 0.95em;">Ubicación</span>
                 </a>
                 </div>
@@ -109,14 +110,31 @@
                     </svg>
                     <p><strong>Confirmar asistencia</strong></p>
                     <p style="font-size: 0.75em; top: 0em !important;">Por favor confirma tu asistencia,<br>¡Esperamos que estés allí!</p>
-                    <a href="https://wa.me/503XXXXXXXX?text=Hola%2C%20quiero%20confirmar%20mi%20asistencia%20a%20la%20boda%20de%20Yuli%20y%20Josu%C3%A9." 
+                    <a href="https://wa.me/50368432823?text=Hola%2C%20quiero%20confirmar%20mi%20asistencia%20a%20la%20boda%20de%20Yuli%20y%20Josu%C3%A9." 
                         target="_blank" 
                         rel="noopener" 
-                        class="btn-outline">
-                        <span style="font-size: 0.7em;">Confirmar</span>
+                        class="btn-outline"
+                        style="display: inline-block; min-width: 110px; padding: 0.45em 1.2em; font-size: 1em; border-radius: 22px; border: 2px solid #870925; color: #870925; background: #fff; text-align: center; transition: background 0.2s, color 0.2s;">
+                         <span style="font-size: 0.95em;">Confirmar</span>
                     </a>
                 </div>
-            </section>
+                </section>
+                <section>
+                    <div style="text-align: center; margin-top: 1.5em;">
+                        <svg width="3em" height="3em" viewBox="0 0 64 64" fill="none" style="vertical-align: middle;">
+                            <image href="sources/camera.svg" width="64" height="64" />
+                        </svg>
+                        <p><strong>¡Comparte tus fotos de la boda!</strong></p>
+                        <p style="font-size: 0.85em;">Sube tus fotos y recuerdos especiales aquí:</p>
+                        <a href="https://drive.google.com/drive/folders/1a_-gw_78HdFJAZbj4WdruyDPhCHYZ0Zi?usp=sharing" 
+                           target="_blank" 
+                           rel="noopener" 
+                           class="btn-outline" 
+                           style="display: inline-block; min-width: 110px; padding: 0.45em 1.2em; font-size: 1em; border-radius: 22px; border: 2px solid #870925; color: #870925; background: #fff; text-align: center; transition: background 0.2s, color 0.2s;">
+                            <span style="font-size: 0.95em;">Subir fotos</span>
+                        </a>
+                    </div>
+                </section>
         </section>
        
         <footer>         
@@ -124,7 +142,7 @@
                 Te esperamos
             </p>
             <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-            <p>Yuli & Josué <br> 17.08.2025</p>
+            <p>Dalia & Josué <br> 17.08.2025</p>
         </footer>
     </div>
     <script src="main.js"></script>
